--- a/file/index.html
+++ b/file/index.html
@@ -6,8 +6,11 @@
 </head>
 <body>
     <!— 배경 이미지 —>
-    <img src="background-image.jpg" alt="Background Image" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;">
-
+<img src="https://i.ibb.co/8xdgCtS/bg.png" alt="Background Image" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;"></a>
+<img src="https://i.ibb.co/Q9m7GZ2/img01.png" style="position: relative; display: block; margin: 50px auto; width: 900px;"></a>
+<img src="https://i.ibb.co/xfbncYN/img02.png" style="position: relative; display: block; margin: 50px auto; width: 900px;"></a>
+<img src="https://i.ibb.co/XC0RVTS/img03.png" style="position: relative; display: block; margin: 50px auto; width: 900px;"></a>
+<img src="https://i.ibb.co/rZ22KFK/img04.png" style="position: relative; display: block; margin: 50px auto; width: 900px;">free photo posting</a><br />
     <!— 위에 올릴 이미지 —>
     <img src="overlay-image.jpg" alt="Overlay Image" style="position: relative; display: block; margin: 50px auto; width: 900px;">
     
