--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 <body>
     <!— 배경 이미지 —>
     <img src="background-image.jpg" alt="Background Image" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;">
+    <img src="https://i.ibb.co/8xdgCtS/bg.png" alt="bg" border="0"></a>
 
     <!— 위에 올릴 이미지 —>
-    <img src="overlay-image.jpg" alt="Overlay Image" style="position: relative; display: block; margin: 50px auto; width: 900px;">
+    <img src="https://i.ibb.co/Q9m7GZ2/img01.png" alt="img01" border="0"></a>
+    <img src="https://i.ibb.co/xfbncYN/img02.png" alt="img02" border="0"></a>
+    <img src="https://i.ibb.co/XC0RVTS/img03.png" alt="img03" border="0"></a>
+    <img src="https://i.ibb.co/rZ22KFK/img04.png" alt="img04" border="0"></a><br /><a target='_blank' href='https://imgbb.com/'>free photo posting</a><br />
     
-    <h1>Welcome to My Page</h1>
-    <p>This is an example of adding another image on top of a background image.</p>
+
 </body>
 </html>
