--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
 </head>
 <body>
     <!— 배경 이미지 —>
-    <img src="background-image.jpg" alt="Background Image" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;">
-    <img src="https://i.ibb.co/8xdgCtS/bg.png" alt="bg" border="0"></a>
+    <img src="https://i.ibb.co/74g01vj/bg.png" alt="Background Image" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;">
 
     <!— 위에 올릴 이미지 —>
-    <img src="https://i.ibb.co/Q9m7GZ2/img01.png" alt="img01" border="0"></a>
-    <img src="https://i.ibb.co/xfbncYN/img02.png" alt="img02" border="0"></a>
-    <img src="https://i.ibb.co/XC0RVTS/img03.png" alt="img03" border="0"></a>
-    <img src="https://i.ibb.co/rZ22KFK/img04.png" alt="img04" border="0"></a><br /><a target='_blank' href='https://imgbb.com/'>free photo posting</a><br />
+    <img src="https://i.ibb.co/p1f8tjp/img01.png" alt="img01" border="0">
+    <img src="https://i.ibb.co/nRyKVy9/img02.png" alt="img02" border="0">
+    <img src="https://i.ibb.co/gJKpS4V/img03.png" alt="img03" border="0">
+    <img src="https://i.ibb.co/7jRrfgB/img04.png" alt="img04" border="0">
     
 
 </body>
