--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Background and Overlay Image</title>
 </head>
 <body>
     <!— 배경 이미지 —>
     <img src="https://i.ibb.co/74g01vj/bg.png" alt="Background Image" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;">
 
     <!— 위에 올릴 이미지 —>
-    <img src="https://i.ibb.co/p1f8tjp/img01.png" alt="img01" border="0">
-    <img src="https://i.ibb.co/nRyKVy9/img02.png" alt="img02" border="0">
-    <img src="https://i.ibb.co/gJKpS4V/img03.png" alt="img03" border="0">
-    <img src="https://i.ibb.co/7jRrfgB/img04.png" alt="img04" border="0">
+    <img src="https://i.ibb.co/p1f8tjp/img01.png" alt="Overlay Image" style="position: relative; display: block; margin: 50px auto; width: 900px;">
+    <img src="https://i.ibb.co/nRyKVy9/img02.png" alt="Overlay Image" style="position: relative; display: block; margin: 50px auto; width: 900px;">
+    <img src="https://i.ibb.co/gJKpS4V/img03.png" alt="Overlay Image" style="position: relative; display: block; margin: 50px auto; width: 900px;">
+    <img src="https://i.ibb.co/7jRrfgB/img04.png" alt="Overlay Image" style="position: relative; display: block; margin: 50px auto; width: 900px;">
     
 
 </body>
