--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <!— 배경 이미지 —>
-    <img src="https://i.ibb.co/74g01vj/bg.png" alt="Background Image" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;">
+    <img src="https://i.ibb.co/74g01vj/bg.png" alt="Background Image" style="position: absolute; top: 0; left: 0; width: 100%; height: 1089; z-index: -1;">
 
     <!— 위에 올릴 이미지 —>
     <img src="https://i.ibb.co/p1f8tjp/img01.png" alt="Overlay Image" style="position: relative; display: block; margin: 0px auto; width: 900px;">
