--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
     <!— 위에 올릴 이미지 —>
     <img src="https://i.ibb.co/p1f8tjp/img01.png" alt="Overlay Image" style="position: relative; display: block; margin: 0px auto; width: 900px;">
-    <img src="https://i.ibb.co/nRyKVy9/img02.png" alt="Overlay Image" style="position: relative; display: block; margin: 0px auto; width: 900px;">
+    <a href="overlay-image.jpg" download="my-image.jpg">
+        <img src="https://i.ibb.co/nRyKVy9/img02.png" alt="Downloadable Overlay Image" style="position: relative; display: block; margin: 50px auto; width: 900px;">
+        
     <img src="https://i.ibb.co/gJKpS4V/img03.png" alt="Overlay Image" style="position: relative; display: block; margin: 0px auto; width: 900px;">
     <img src="https://i.ibb.co/7jRrfgB/img04.png" alt="Overlay Image" style="position: relative; display: block; margin: 0px auto; width: 900px;">
     
