--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta property="og:title" content="제 3회 SW Market Fair 행사안내"> 
+    <meta property="og:url" content="https://koswkosw.github.io/SW-Market-Fair/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://i.ibb.co/3hqSgvK/img06.jpg"> 
+    <meta property="og:title" content="제 3회 SW Market Fair 행사안내"> 
+    <meta property="og:description" content="제 3회 SW Market Fait를 개최합니다!">
 </head>
 <body>
     <!— 배경 이미지 —>
