--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- 위에 올릴 이미지 -->
     <picture>
-        <source srcset="https://i.ibb.co/Ttyjygp/img02-m.png" media="(max-width: 600px)">
+        <source srcset="https://i.ibb.co/ykfBknL/img02-m.png" media="(max-width: 600px)">
         <img src="https://i.ibb.co/p1f8tjp/img01.png" alt="img01" style="position: relative; display: block; margin: 0 auto; width: 100%; max-width: 900px;">
     </picture>
 
