--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- 배경 이미지 -->
     <picture>
-        <source srcset="https://i.ibb.co/ykfBknL/img02-m.png" media="(max-width: 600px)">
+        <source srcset="https://i.ibb.co/n8ys3r5/img01-m.png" media="(max-width: 600px)">
         <img src="https://i.ibb.co/rGGt75J/img01.png" alt="배경 이미지" style="position: absolute; top: 0; left: 0; width: 100%; height: 1090px; z-index: -1;">
     </picture>
 
