--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- 배경 이미지 -->
     <picture>
         <source srcset="https://i.ibb.co/BVMFW4j/img01-m.png" style="height: 100%;" media="(max-width: 600px)">
-        <img src="https://i.ibb.co/rGGt75J/img01.png" alt="배경 이미지" style="position: absolute; top: 0; left: 0; width: 100%; height: 1090px; z-index: -1;">
+        <img src="https://i.ibb.co/rGGt75J/img01.png" alt="배경 이미지" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;">
     </picture>
 
     <!-- 위에 올릴 이미지 -->
