--- a/index.html
+++ b/index.html
@@ -1,47 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>제 3회 SW Market Fair 행사안내</title>
-    
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="제 3회 SW Market Fair 행사안내"> 
-    <meta property="og:url" content="https://koswkosw.github.io/SW-Market-Fair/">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://i.ibb.co/3hqSgvK/img06.jpg"> 
-    <meta property="og:description" content="제 3회 SW Market Fair를 개최합니다!">
+    <style>
+        /* 전체 화면 크기에 맞는 배경 이미지 스타일 */
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
+        .background-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* 화면에 맞게 이미지 비율을 유지하며 채움 */
+            z-index: -1;
+        }
+
+        .content {
+            position: relative;
+            z-index: 1;
+            text-align: center;
+        }
+
+        .foreground-image {
+            display: block;
+            margin: 0 auto;
+            width: 100%;
+            max-width: 900px;
+        }
+    </style>
 </head>
 <body>
     <!-- 배경 이미지 -->
     <picture>
-        <source srcset="https://i.ibb.co/BVMFW4j/img01-m.png" style="height: 100%;" media="(max-width: 600px)">
-        <img src="https://i.ibb.co/rGGt75J/img01.png" alt="배경 이미지" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;">
+        <source srcset="https://i.ibb.co/BVMFW4j/img01-m.png" media="(max-width: 600px)">
+        <img class="background-image" src="https://i.ibb.co/rGGt75J/img01.png" alt="배경 이미지">
     </picture>
 
-    <!-- 위에 올릴 이미지 -->
-    <picture>
-        <source srcset="https://i.ibb.co/ykfBknL/img02-m.png" media="(max-width: 600px)">
-        <img src="https://i.ibb.co/p1f8tjp/img01.png" alt="img01" style="position: relative; display: block; margin: 0 auto; width: 100%; max-width: 900px;">
-    </picture>
-
-    <a href="https://blog.kakaocdn.net/dn/PAleO/btsLLSpaXQS/866BWMKCFzFBJ9lf35xzd1/%ED%96%89%EC%82%AC%20%EA%B0%9C%EC%9A%94%20%EB%B0%8F%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8.zip?attach=1&knm=tfile.zip" download="행사 개요 및 프로그램">
+    <!-- 콘텐츠 -->
+    <div class="content">
+        <!-- 위에 올릴 이미지 -->
         <picture>
-            <source srcset="https://i.ibb.co/cD4QWSR/img03-m.png" media="(max-width: 600px)">
-            <img src="https://i.ibb.co/nRyKVy9/img02.png" alt="img02" style="position: relative; display: block; margin: 0 auto; width: 100%; max-width: 900px;">
+            <source srcset="https://i.ibb.co/ykfBknL/img02-m.png" media="(max-width: 600px)">
+            <img class="foreground-image" src="https://i.ibb.co/p1f8tjp/img01.png" alt="img01">
         </picture>
-    </a>
 
-    <a href="https://blog.kakaocdn.net/dn/bBTwFL/btsLNbnloCN/0Xk22wDEK0pDYbj4aBmtIK/%5B%EB%B6%99%EC%9E%84%5D%20%EC%A0%9C3%ED%9A%8C%20%E3%80%8CSW%20Market%20Fair%20%E3%80%8D%20%EB%B0%9C%ED%91%9C%20%EB%B0%8F%20%EC%A0%84%EC%8B%9C%EB%B6%80%EC%8A%A4%20%EC%B0%B8%EA%B0%80%EC%8B%A0%EC%B2%AD%EC%84%9C.hwp?attach=1&knm=tfile.hwp" download="[첨부자료] 제3회 「SW Market Fair 」 발표 및 전시부스 참가신청서">
-        <picture>
-            <source srcset="https://i.ibb.co/9gn9vkL/img04-m.png" media="(max-width: 600px)">
-            <img src="https://i.ibb.co/gJKpS4V/img03.png" alt="img03" style="position: relative; display: block; margin: 0 auto; width: 100%; max-width: 900px;">
-        </picture>
-    </a>
+        <!-- 다운로드 링크 -->
+        <a href="https://blog.kakaocdn.net/dn/PAleO/btsLLSpaXQS/866BWMKCFzFBJ9lf35xzd1/%ED%96%89%EC%82%AC%20%EA%B0%9C%EC%9A%94%20%EB%B0%8F%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8.zip" download="행사 개요 및 프로그램">
+            <img class="foreground-image" src="https://i.ibb.co/nRyKVy9/img02.png" alt="img02">
+        </a>
 
-    <picture>
-        <source srcset="https://i.ibb.co/0rTMcDk/img05-m.png" media="(max-width: 600px)">
-        <img src="https://i.ibb.co/7jRrfgB/img04.png" alt="img04" style="position: relative; display: block; margin: 0 auto; width: 100%; max-width: 900px;">
-    </picture>
+        <a href="https://blog.kakaocdn.net/dn/bBTwFL/btsLNbnloCN/0Xk22wDEK0pDYbj4aBmtIK/%5B%EB%B6%99%EC%9E%84%5D%20%EC%A0%9C3%ED%9A%8C%20%E3%80%8CSW%20Market%20Fair%20%E3%80%8D%20%EB%B0%9C%ED%91%9C%20%EB%B0%8F%20%EC%A0%84%EC%8B%9C%EB%B6%80%EC%8A%A4%20%EC%B0%B8%EA%B0%80%EC%8B%A0%EC%B2%AD%EC%84%9C.hwp" download="[첨부자료] 제3회 「SW Market Fair 」 발표 및 전시부스 참가신청서.hwp">
+            <img class="foreground-image" src="https://i.ibb.co/gJKpS4V/img03.png" alt="img03">
+        </a>
+    </div>
 </body>
 </html>
