--- a/index.html
+++ b/index.html
@@ -11,13 +11,37 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://i.ibb.co/3hqSgvK/img06.jpg"> 
     <meta property="og:description" content="제 3회 SW Market Fair를 개최합니다!">
-    
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        /* 기본 배경 이미지 */
+        img.background {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
+
+        /* 모바일 전용 배경 이미지 */
+        @media (max-width: 600px) {
+            img.background {
+                height: 720px; /* 원하는 높이로 조정 */
+                object-fit: cover; /* 필요에 따라 조정 */
+            }
+        }
+    </style>
 </head>
 <body>
     <!-- 배경 이미지 -->
     <picture>
-        <source srcset="https://i.ibb.co/BVMFW4j/img01-m.png" style="height: 720px;" media="(max-width: 600px)">
-        <img src="https://i.ibb.co/rGGt75J/img01.png" alt="배경 이미지" style="position: absolute; top: 0; left: 0; width: 100%; height: 1100px; z-index: -1;">
+        <source srcset="https://i.ibb.co/BVMFW4j/img01-m.png" media="(max-width: 600px)">
+        <img src="https://i.ibb.co/rGGt75J/img01.png" alt="배경 이미지" class="background">
     </picture>
     <!-- 위에 올릴 이미지 -->
     <picture>
