--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         /* 모바일 전용 배경 이미지 */
         @media (max-width: 600px) {
             img.background {
-                height: 720px; /* 원하는 높이로 조정 */
+                height: 100%; /* 원하는 높이로 조정 */
                 object-fit: cover; /* 필요에 따라 조정 */
             }
         }
