--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             width: 100%;
             height: 100%;
             z-index: -1;
-            background-size: cover;
+            object-fit: cover;
         }
 
         /* 모바일 전용 배경 이미지 */
