--- a/index.html
+++ b/index.html
@@ -42,13 +42,20 @@
     <img src="https://i.ibb.co/p1f8tjp/img01.png" alt="img01" style="position: relative; display: block; margin: 0 auto; width: 100%; max-width: 900px;">
 </picture>
 
-<a href="https://blog.kakaocdn.net/dn/PAleO/btsLLSpaXQS/866BWMKCFzFBJ9lf35xzd1/%ED%96%89%EC%82%AC%20%EA%B0%9C%EC%9A%94%20%EB%B0%8F%20%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%A8.zip?attach=1&knm=tfile.zip" download="행사 개요 및 프로그램">
+<a href="https://drive.google.com/file/d/1UHd53271kWxu2aA-GPGO6kHHMqIUfkId/view" download="행사 참가 안내">
     <picture>
         <source srcset="https://i.ibb.co/cD4QWSR/img03-m.png" media="(max-width: 600px)">
-        <img src="https://i.ibb.co/nRyKVy9/img02.png" alt="img02" style="position: relative; display: block; margin: 0 auto; width: 100%; max-width: 900px;">
+        <img src="https://i.ibb.co/zn66G00/img-02-1.png" alt="img02-1" style="position: relative; display: inline-block; margin: 0 auto; width: 100%; max-width: 900px;">
     </picture>
 </a>
 
+<a href="https://drive.google.com/file/d/1Kf5d0QeVtgrWbdvA6ZV-F_-EyEQgUi9K/view" download="행사 개요 및 프로그램">
+    <picture>
+        <source srcset="https://i.ibb.co/cD4QWSR/img03-m.png" media="(max-width: 600px)">
+        <img src="https://i.ibb.co/zZpWJYb/img02-2.png" alt="img02-2" style="position: relative; display: inline-block; margin: 0 auto; width: 100%; max-width: 900px;">
+    </picture>
+</a>
+    
 <a href="https://blog.kakaocdn.net/dn/bBTwFL/btsLNbnloCN/0Xk22wDEK0pDYbj4aBmtIK/%5B%EB%B6%99%EC%9E%84%5D%20%EC%A0%9C3%ED%9A%8C%20%E3%80%8CSW%20Market%20Fair%20%E3%80%8D%20%EB%B0%9C%ED%91%9C%20%EB%B0%8F%20%EC%A0%84%EC%8B%9C%EB%B6%80%EC%8A%A4%20%EC%B0%B8%EA%B0%80%EC%8B%A0%EC%B2%AD%EC%84%9C.hwp?attach=1&knm=tfile.hwp" download="[첨부자료] 제3회 「SW Market Fair 」 발표 및 전시부스 참가신청서">
     <picture>
         <source srcset="https://i.ibb.co/9gn9vkL/img04-m.png" media="(max-width: 600px)">
