--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
@@ -42,23 +42,28 @@
     <img src="https://i.ibb.co/p1f8tjp/img01.png" alt="img01" style="position: relative; display: block; margin: 0 auto; width: 100%; max-width: 900px;">
 </picture>
 
-<a href="https://drive.google.com/file/d/1UHd53271kWxu2aA-GPGO6kHHMqIUfkId/view" download="행사 참가 안내">
-    <picture>
-    <div style="text-align:center;">
-        <source srcset="https://i.ibb.co/cD4QWSR/img03-m.png" media="(max-width: 600px)">
-        <img src="https://i.ibb.co/zn66G00/img-02-1.png" alt="img02-1" style="position: relative; display: inline-block; margin: block; width: 100%; max-width: 450px;">
-    </div>
-    </picture>
-</a>
-
-<a href="https://drive.google.com/file/d/1Kf5d0QeVtgrWbdvA6ZV-F_-EyEQgUi9K/view" download="행사 개요 및 프로그램">
-    <picture>
-    <div style="text-align:center;">
-        <source srcset="https://i.ibb.co/cD4QWSR/img03-m.png" media="(max-width: 600px)">
-        <img src="https://i.ibb.co/zZpWJYb/img02-2.png" alt="img02-2" style="position: relative; display: inline-block; margin: block; width: 100%; max-width: 450px;">
-    </div>
-    </picture>
-</a>
+<table align="center">
+        <tr>
+            <td>
+                <a href="https://drive.google.com/file/d/1UHd53271kWxu2aA-GPGO6kHHMqIUfkId/view" download="행사 참가 안내">
+                    <picture>
+                        <source srcset="https://i.ibb.co/cD4QWSR/img03-m.png" media="(max-width: 600px)">
+                        <img src="https://i.ibb.co/zn66G00/img-02-1.png" alt="img02-1" style="position: relative; display: inline-block; margin: auto; width: 100%; max-width: 450px;">
+                    </picture>
+                </a>
+            </td>
+            <td>
+                <a href="https://drive.google.com/file/d/1Kf5d0QeVtgrWbdvA6ZV-F_-EyEQgUi9K/view" download="행사 개요 및 프로그램">
+                    <picture>
+                    <div style="text-align:center;">
+                        <source srcset="https://i.ibb.co/cD4QWSR/img03-m.png" media="(max-width: 600px)">
+                        <img src="https://i.ibb.co/zZpWJYb/img02-2.png" alt="img02-2" style="position: relative; display: inline-block; margin: auto; width: 100%; max-width: 450px;">
+                    </div>
+                    </picture>
+                </a>
+            </td>
+        </tr>
+    </table>
     
 <a href="https://blog.kakaocdn.net/dn/bBTwFL/btsLNbnloCN/0Xk22wDEK0pDYbj4aBmtIK/%5B%EB%B6%99%EC%9E%84%5D%20%EC%A0%9C3%ED%9A%8C%20%E3%80%8CSW%20Market%20Fair%20%E3%80%8D%20%EB%B0%9C%ED%91%9C%20%EB%B0%8F%20%EC%A0%84%EC%8B%9C%EB%B6%80%EC%8A%A4%20%EC%B0%B8%EA%B0%80%EC%8B%A0%EC%B2%AD%EC%84%9C.hwp?attach=1&knm=tfile.hwp" download="[첨부자료] 제3회 「SW Market Fair 」 발표 및 전시부스 참가신청서">
     <picture>
