--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 <a href="https://blog.kakaocdn.net/dn/bBTwFL/btsLNbnloCN/0Xk22wDEK0pDYbj4aBmtIK/%5B%EB%B6%99%EC%9E%84%5D%20%EC%A0%9C3%ED%9A%8C%20%E3%80%8CSW%20Market%20Fair%20%E3%80%8D%20%EB%B0%9C%ED%91%9C%20%EB%B0%8F%20%EC%A0%84%EC%8B%9C%EB%B6%80%EC%8A%A4%20%EC%B0%B8%EA%B0%80%EC%8B%A0%EC%B2%AD%EC%84%9C.hwp?attach=1&knm=tfile.hwp" download="[첨부자료] 제3회 「SW Market Fair 」 발표 및 전시부스 참가신청서">
     <picture>
         <source srcset="https://i.ibb.co/9gn9vkL/img04-m.png" media="(max-width: 600px)">
-        <img src="https://i.ibb.co/gJKpS4V/img03.png" alt="img03" style="position: relative; display: block; margin: 0 auto; width: 100%; max-width: 900px;">
+        <img src="https://i.ibb.co/n1BYsmT/img03.png" alt="img03" style="position: relative; display: block; margin: 0 auto; width: 100%; max-width: 900px;">
     </picture>
 </a>
 
 <picture>
     <source srcset="https://i.ibb.co/0rTMcDk/img05-m.png" media="(max-width: 600px)">
-    <img src="https://i.ibb.co/7jRrfgB/img04.png" alt="img04" style="position: relative; display: block; margin: 0 auto; width: 100%; max-width: 900px;">
+    <img src="https://i.ibb.co/Xt685rS/img04.png" alt="img04" style="position: relative; display: block; margin: 0 auto; width: 100%; max-width: 900px;">
 </picture>
 </body>
 </html>
