--- a/index.html
+++ b/index.html
@@ -55,10 +55,8 @@
             <td>
                 <a href="https://drive.google.com/file/d/1Kf5d0QeVtgrWbdvA6ZV-F_-EyEQgUi9K/view" download="행사 개요 및 프로그램">
                     <picture>
-                    <div style="text-align:center;">
                         <source srcset="https://i.ibb.co/64J2HQB/img03-m.png" media="(max-width: 600px)">
-                        <img src="https://i.ibb.co/zZpWJYb/img02-2.png" alt="img02-2" style="position: relative; display: inline-block; margin: auto; width: 100%; max-width: 450px;">
-                    </div>
+                            <img src="https://i.ibb.co/zZpWJYb/img02-2.png" alt="img02-2" style="display: block; margin: 0 auto; width: 100%; max-width: 450px;">
                     </picture>
                 </a>
             </td>
