--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 <table align="center">
         <tr>
             <td>
-                <a href="https://drive.google.com/file/d/1UHd53271kWxu2aA-GPGO6kHHMqIUfkId/view" download="행사 참가 안내">
+                 <a href="https://drive.google.com/file/d/1UHd53271kWxu2aA-GPGO6kHHMqIUfkId/view" download="행사 참가 안내">
                     <picture>
                         <source srcset="https://i.ibb.co/th1hG0n/img02-m.png" media="(max-width: 600px)">
-                        <img src="https://i.ibb.co/zn66G00/img-02-1.png" alt="img02-1" style="position: relative; display: inline-block; margin: auto; width: 100%; max-width: 450px;">
+                            <img src="https://i.ibb.co/zn66G00/img-02-1.png" alt="img02-1" alt="img02-2" style="display: block; margin: 0 auto; width: 100%; max-width: 450px;">
                     </picture>
                 </a>
             </td>
