--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <td>
                  <a href="https://drive.google.com/file/d/1UHd53271kWxu2aA-GPGO6kHHMqIUfkId/view" download="행사 참가 안내">
                     <picture>
-                        <source srcset="https://i.ibb.co/82vgJDH/img02-m.png" media="(max-width: 600px)">
+                        <source srcset="https://i.ibb.co/vqmrNtH/img02-m.png" media="(max-width: 600px)">
                             <img src="https://i.ibb.co/zn66G00/img-02-1.png" alt="img02-1" alt="img02-2" style="display: block; margin: 0 auto; width: 100%; max-width: 450px;">
                     </picture>
                 </a>
@@ -55,7 +55,7 @@
             <td>
                 <a href="https://drive.google.com/file/d/1Kf5d0QeVtgrWbdvA6ZV-F_-EyEQgUi9K/view" download="행사 개요 및 프로그램">
                     <picture>
-                        <source srcset="https://i.ibb.co/MCSfYSj/img03-m.png" media="(max-width: 600px)">
+                        <source srcset="https://i.ibb.co/SKk9sDH/img03-m.png" media="(max-width: 600px)">
                             <img src="https://i.ibb.co/zZpWJYb/img02-2.png" alt="img02-2" style="display: block; margin: 0 auto; width: 100%; max-width: 450px;">
                     </picture>
                 </a>
