--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </a>
 
 <picture>
-    <source srcset="https://i.ibb.co/0rTMcDk/img05-m.png" media="(max-width: 600px)">
+    <source srcset="https://i.postimg.cc/SRvQ9yvQ/img05-m.png" media="(max-width: 600px)">
     <img src="https://i.ibb.co/Xt685rS/img04.png" alt="img04" style="position: relative; display: block; margin: 0 auto; width: 100%; max-width: 900px;">
 </picture>
 </body>
